# tomshop

./: LICENSE  README.md  pyproject.toml
backend/api/: models.py  products.py  serializers.py  signals.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_order_shippingaddress_review_orderitem.py  0003_product_image.py
backend/api/urls/: order_urls.py  user_urls.py
backend/api/views/: order_views.py  product_views.py  user_views.py
backend/backend/: settings.py  urls.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  products.js  store.js
frontend/src/actions/: cartActions.js  productActions.js
frontend/src/components/: Footer.js  Header.js  Loader.js  Product.js  Rating.js
frontend/src/reducers/: cartReducers.js  productReducers.js
frontend/src/screens/: CartScreen.js  HomeScreen.js  ProductScreen.js
